@startuml

class ContactPerson {
    * id: Long
    email: String
    telNo: String
    title: Enum
    firstName: String
    lastName: String
}
class JobOffer {
    * jobOfferId: Long
    title: String
    descr: String
    category: String
    condition: String
    salary: Double
}
class Company {
    * companyId: Long
    email: String
    password: String
    companyName: String
    websiteUrl: String
    branche: String
    + jobOfferId: JobOffer
    + contactPersonId: ContactPerson
    + addressId: Address
}
class Address {
    * addressId: Long
    street: String
    streetNo: String
    zipNo: Int
    city: String
    country: String
    state: String
}
class Senior {
    * seniorId: Long
    email: String
    password: String
    resume: File
    descr: String
    skillDescr: String
    interestDescr: String
    jobField: String
    jobBranche: String
    preferableWork: String
    retirement: Date
    hoursPerWeek: Int
    commute: boolean
    + addressId: Address
}

Company "1" -- "*" JobOffer
Company "1" -- "*" ContactPerson
Senior "*" -- "1" Address
Company "*" -- "1" Address

@enduml
